# openhpsdr-zeus-plugins

./: .gitignore  CONTRIBUTING.md  README.md  registry.json
.github/: CODEOWNERS
.github/workflows/: validate.yml
amplifiers/MercuryLux/ui/: mercurylux.tsx
amplifiers/PowerGeniusXL/: PgxlPlugin.cs  PowerGeniusXL.csproj  README.md  plugin.json
amplifiers/PowerGeniusXL/ui/: pgxl.tsx
amplifiers/Rf2k/: README.md  Rf2k.csproj  Rf2kPlugin.cs  plugin.json
amplifiers/Rf2k/ui/: rf2k.tsx
antenna-switches/AntennaGenius/: AntennaGenius.csproj  README.md  package-lock.json  package.json  plugin.json  vite.config.ts
antenna-switches/AntennaGenius/ui/: antennagenius.tsx
audio/Bass/: Bass.csproj  BassDsp.cs  BassPlugin.cs  package-lock.json  package.json  plugin.json  vite.config.ts
audio/Bass/ui/: bass.tsx
audio/Compressor/: Compressor.csproj  CompressorDsp.cs  CompressorPlugin.cs  package-lock.json  package.json  vite.config.ts
audio/CwScaf/: CwScaf.csproj  CwScafPlugin.cs  ScafDsp.cs  package-lock.json  package.json  plugin.json  vite.config.ts
audio/CwScaf/ui/: scaf.tsx
audio/Eq/: CHANGELOG.md  EqDsp.cs  EqPlugin.cs  RealFft.cs  plugin.json
audio/Eq/ui/: eq.tsx
audio/Exciter/: ExciterDsp.cs  ExciterPlugin.cs  plugin.json
audio/Exciter/ui/: exciter.tsx
audio/NoiseGate/: CHANGELOG.md  NoiseGate.csproj  NoiseGateDsp.cs  NoiseGatePlugin.cs  package-lock.json  package.json  plugin.json  vite.config.ts
audio/NoiseGate/ui/: noisegate.tsx
audio/Recorder/: Player.cs  Recorder.csproj  RecorderEngine.cs  RecorderPlugin.cs  WavReader.cs  WavSink.cs  package.json  plugin.json  vite.config.ts
audio/Recorder/ui/: recorder.tsx
audio/Reverb/: Reverb.csproj  ReverbDsp.cs  ReverbPlugin.cs  package-lock.json  package.json  plugin.json  vite.config.ts
audio/Reverb/ui/: reverb.tsx
audio/Rtty/: Baudot.cs  Rtty.csproj  RttyDemod.cs  RttyModulator.cs  RttyPlugin.cs  RttyTx.cs  package-lock.json  package.json  plugin.json  vite.config.ts
audio/Rtty/ui/: rtty.tsx
audio/RxRecorder/: RecorderEngine.cs  RxRecorder.csproj  RxRecorderPlugin.cs  WavSink.cs  package-lock.json  package.json  plugin.json
audio/RxRecorder/ui/: recorder.tsx
audio/TubePreamp/: CHANGELOG.md  TubePreamp.csproj  TubePreampDsp.cs  TubePreampPlugin.cs  package-lock.json  package.json  plugin.json  vite.config.ts
audio/TubePreamp/ui/: tubepreamp.tsx
modes/Digital/: ATTRIBUTIONS.md  Digital.csproj  DigitalConfigService.cs  DigitalDtos.cs  DigitalEventStream.cs  DigitalPlugin.cs  DigitalTxArbiter.cs  DigitalTxStreamer.cs  Ft8Service.cs  Ft8TxService.cs  README.md  WsprService.cs  WsprTxService.cs  package-zip.sh  plugin.json
modes/Digital/Digital.Tests/: CallsignCountryResolverTests.cs  Digital.Tests.csproj  DigitalDecodeWatchdogTests.cs  DigitalEventStreamTests.cs  DigitalTxArbiterTests.cs  Ft8DecoderTests.cs  Ft8MessageParseTests.cs  Ft8PipelineTests.cs  Ft8SynthTests.cs  Ft8TxServiceTests.cs  WsprDecoderTests.cs  WsprTxServiceTests.cs
modes/Digital/Dsp/: CallsignCountryResolver.cs  Ft8Decoder.cs  Ft8MessageParse.cs  Ft8NativeLoader.cs  Ft8NativeMethods.cs  Ft8Resampler.cs  Ft8SlotAccumulator.cs  Ft8Synth.cs  WsprDecoder.cs  WsprNativeMethods.cs
modes/Digital/Spotting/: PskReporterEncoder.cs  PskReporterReporter.cs  WsprnetReporter.cs
modes/Digital/Wsjtx/: WsjtxLiveEmitter.cs  WsjtxLiveSender.cs  WsjtxMessage.cs
modes/Digital/native/ft8/: .gitignore  CMakeLists.txt  README.md  win_compat.h  zeus_ft8.c  zeus_ft8.h
modes/Digital/native/ft8/test/: zeus_ft8_selftest.c
modes/Digital/native/wspr/: CMakeLists.txt  README.md  osdwspr_stub.c  zeus_wspr.c  zeus_wspr.h  zeus_wspr_decode.c
modes/Digital/native/wspr/test/: zeus_wspr_roundtrip.c  zeus_wspr_selftest.c
monitors/Recorder/: AudioSanitize.cs  README.md  Recorder.csproj  RecorderPlugin.cs  WavFile.cs  WavLibrary.cs  WavMeter.cs  WavRecorderService.cs  WavWriter.cs  package-lock.json  package.json  plugin.json  tsconfig.json  vite.config.ts
monitors/Recorder/Recorder.Tests/: Recorder.Tests.csproj  RecorderOverAirTests.cs  WavFileSanitizerTests.cs  WavLibraryTests.cs
monitors/Recorder/ui/: DirectoryPickerModal.tsx  WavRecorderPanel.css  WavRecorderPanel.tsx  recorder-api.ts  useDialogFocusTrap.ts  wav-recorder-panel.tsx  wavRecorder.format.test.ts  wavRecorder.format.ts
monitors/Voyeur/: ATTRIBUTIONS.md  CallsignExtractor.cs  LlamaSummarizer.cs  Voyeur.csproj  VoyeurInstallService.cs  VoyeurMonitorService.cs  VoyeurPlugin.cs  VoyeurSegmenter.cs  VoyeurStore.cs  VoyeurTranscriptionService.cs  WhisperTranscriber.cs  WhisperWav.cs  package-lock.json  package.json  plugin.json  vite.config.ts
monitors/Voyeur.Tests/: Voyeur.Tests.csproj  VoyeurSegmenterTests.cs
monitors/Voyeur.Tests/Alerts/: AlertChannelTests.cs  AlertClipMakerTests.cs  AlertGateTests.cs  AlertModelsTests.cs  AlertSettingsRoundTripTests.cs  AlertTestSupport.cs  VoyeurAlertServiceTests.cs  WatchwordMatcherTests.cs
monitors/Voyeur.Tests/Callsigns/: CallsignMatcherSnapStateTests.cs  CallsignMatcherTests.cs  ItuCallsignTests.cs
monitors/Voyeur.Tests/Corpus/: VoyeurCorpusStoreTests.cs
monitors/Voyeur.Tests/Stt/: EngineSelectionTests.cs  FakeSttEngine.cs  SherpaArgsHotwordsTests.cs  SherpaParakeetParseTests.cs  SttBenchRunnerTests.cs
monitors/Voyeur.Tests/Vad/: PreRollBufferTests.cs  SileroVadTests.cs  VadTrimFallthroughTests.cs
monitors/Voyeur/Alerts/: AlertClipMaker.cs  AlertModels.cs  EmailAlertChannel.cs  (+5 more)
samples/: README.md
samples/Amplifier/: Amplifier.csproj  plugin.json
samples/Compressor/: plugin.json
samples/Eq/: Eq.csproj  package-lock.json  package.json  vite.config.ts
samples/HelloWorld/: HelloWorld.csproj  plugin.json
samples/PowerGeniusXL/: PgxlPlugin.cs  PowerGeniusXL.csproj  README.md  plugin.json
samples/Rf2k/: Rf2k.csproj  plugin.json
samples/TunerGeniusXL/: README.md  TgxlPlugin.cs  TunerGeniusXL.csproj  plugin.json
schema/: manifest.schema.json
switches/AntennaGenius/: AntennaGenius.csproj  AntennaGeniusPlugin.cs  README.md  package.json  plugin.json
tuners/TunerGeniusXL/: README.md  TunerGeniusXL.csproj  plugin.json
(+27 files in other folders)
